<resources>
    <string name="app_name">Tarea_RecyclerView_Dialog</string>
    <string name="hb3">H3(80%)</string>
    <string name="hb2">H2(50%)</string>
    <string name="hb1">H1(20%)</string>

    <string name="vb1">V1(20%)</string>
    <string name="vb2">V2(35%)</string>
    <string name="vb3">V3(50%)</string>
    <string name="vb4">V4(65%)</string>
    <string name="vb5">V5(80%)</string>

    <string name="change_color">Cambiar color</string>
    <string name="color_palette">Paleta de colores</string>

    <string name="c1">Blanco</string>
    <string name="c2">Rojo</string>
    <string name="c3">Naranja</string>
    <string name="c4">Amarillo</string>
    <string name="c5">Verde</string>
    <string name="c6">Cián</string>
    <string name="c7">Azul</string>
    <string name="c8">Violeta</string>
    <string name="c9">Negro</string>
    <string name="aplicar_color">Aplicar color</string>
</resources>