<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp"
    android:background="@color/app_background"
    android:orientation="horizontal">
    <LinearLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/btn_aplicarColor"
        app:layout_constraintTop_toTopOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">
            <TextView
                android:id="@+id/tvEligeBarra"
                android:layout_width="match_parent"
                android:text="Elige una barra"
                android:textColor="@color/white"
                android:padding="15dp"
                android:textSize="20dp"
                android:layout_height="wrap_content">
            </TextView>
            <RadioGroup
                android:id="@+id/rgEligeBarra"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hb1"
                    android:checked="false"
                    android:textColor="@color/white"
                    app:buttonTint="@color/negro_20">
                </RadioButton>
                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hb2"
                    android:checked="false"
                    android:textColor="@color/white"
                    app:buttonTint="@color/negro_50">
                </RadioButton>
                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hb3"
                    android:checked="false"
                    android:textColor="@color/white"
                    app:buttonTint="@color/negro_80">
                </RadioButton>
                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/vb1"
                    android:checked="false"
                    android:textColor="@color/white"
                    app:buttonTint="@color/negro_20">
                </RadioButton>
                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/vb2"
                    android:checked="false"
                    android:textColor="@color/white"
                    app:buttonTint="@color/negro_35">
                </RadioButton>
                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/vb3"
                    android:checked="false"
                    android:textColor="@color/white"
                    app:buttonTint="@color/negro_50">
                </RadioButton>
                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/vb4"
                    android:checked="false"
                    android:textColor="@color/white"
                    app:buttonTint="@color/negro_65">
                </RadioButton>
                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/vb5"
                    android:checked="false"
                    android:textColor="@color/white"
                    app:buttonTint="@color/negro_80">
                </RadioButton>

            </RadioGroup>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">
            <TextView
                android:id="@+id/tvEligeColor"
                android:layout_width="match_parent"
                android:text="Elige un color"
                android:textColor="@color/white"
                android:padding="15dp"
                android:textSize="20dp"
                android:layout_height="wrap_content">
            </TextView>
            <RadioGroup
                android:id="@+id/rgEligeColor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/c1"
                    android:checked="false"
                    android:textColor="@color/white"
                    app:buttonTint="@color/blanco_100">
                </RadioButton>
                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/c2"
                    android:checked="false"
                    android:textColor="@color/white"
                    app:buttonTint="@color/rojo_100">
                </RadioButton>
                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/c3"
                    android:checked="false"
                    android:textColor="@color/white"
                    app:buttonTint="@color/naranja_100">
                </RadioButton>
                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/c4"
                    android:checked="false"
                    android:textColor="@color/white"
                    app:buttonTint="@color/amarillo_100">
                </RadioButton>
                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/c5"
                    android:checked="false"
                    android:textColor="@color/white"
                    app:buttonTint="@color/verde_100">
                </RadioButton>
                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/c6"
                    android:checked="false"
                    android:textColor="@color/white"
                    app:buttonTint="@color/cian_100">
                </RadioButton>
                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/c7"
                    android:checked="false"
                    android:textColor="@color/white"
                    app:buttonTint="@color/azul_100">
                </RadioButton>
                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/c8"
                    android:checked="false"
                    android:textColor="@color/white"
                    app:buttonTint="@color/violeta_100">
                </RadioButton>
                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/c9"
                    android:checked="false"
                    android:textColor="@color/white"
                    app:buttonTint="@color/negro_100">
                </RadioButton>

            </RadioGroup>
        </LinearLayout>
    </LinearLayout>
    <androidx.cardview.widget.CardView
        android:id="@+id/btn_aplicarColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/aplicar_color"
        android:clickable="true"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/mainLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/aplicar_color"/>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>